@@ -1,3 +1,8 @@
+2004-11-17  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-shapes.c: Refactored the image downloading code into a generic xlink:href downloading code.
+	Caleb can now use this for linking.
+	
 2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-defs.c: Interfile linking now implemented. Can't yet use gnome-vfs
